<resources>
    <string name="app_name">lavueltaapp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombres_usuario">Nombres</string>
    <string name="email_usuario">E-mail</string>
    <string name="password_usuario">Password</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ingresar">Ya tienes un usuario. Ingresa!</string>
    <string name="ingresar_cuenta">Ingresar</string>
    <string name="crear_cuenta_link">Crea una nueva cuenta. Regístrate</string>
    <string name="recordar_contrasena">Recordar Contraseña</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="addServicios">Adicionar Servicio</string>
    <string name="editPerfil">Perfil</string>
    <string name="contactenos">Contactenos</string>
    <string name="contactar">Contactar</string>
    <string name="salir">Salir</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="imagen_perfil">Imagen Perfil de Usuario</string>
    <string name="direccion_usuario">Dirección</string>
    <string name="celular_usuario">Celular</string>
    <string name="guardar">Guardar</string>

    <string name="direccion_envio">Dirección o Ubicación de Envio</string>
    <string name="direccion_destino">Dirección o Ubicación de Destino</string>
    <string name="nombre_envia">Nombre quien Envia</string>
    <string name="nombre_recibe">Nombre quien Recibe</string>
    <string name="desc_servicio">Por favor explica el servicio:</string>
</resources>
