<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_servicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lavuelta.lavueltaapp.presentacion.actividades.ServicioActivity">

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:indeterminate="true"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputDireccionEnvio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/direccion_envio">

            <EditText
                android:id="@+id/txtDireccionEnvio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="@integer/max_long_nombres" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputNombreEnvia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/inputDireccionEnvio"
            android:layout_below="@id/inputDireccionEnvio"
            android:layout_marginTop="8dp"
            android:hint="@string/nombre_envia">

            <EditText
                android:id="@+id/txtNombreEnvia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="@integer/max_long_direccion" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputDireccionDestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/inputNombreEnvia"
            android:layout_below="@id/inputNombreEnvia"
            android:layout_marginTop="8dp"
            android:hint="@string/direccion_destino">

            <EditText
                android:id="@+id/txtDireccionDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="@integer/max_long_direccion" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputNombreRecibe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/inputDireccionDestino"
            android:layout_below="@id/inputDireccionDestino"
            android:layout_marginTop="8dp"
            android:hint="@string/nombre_recibe">

            <EditText
                android:id="@+id/txtNombreRecibe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="@integer/max_long_direccion" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/inputNombreRecibe"
            android:layout_below="@id/inputNombreRecibe"
            android:id="@+id/textDescServicio"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/desc_servicio"/>

        <EditText
            android:id="@+id/txtDescServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="@integer/max_long_direccion" />

    </RelativeLayout>

</LinearLayout>
